Adding more sbt opts